KD-3994 - fixing oplib label create aligning

--- a/koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
@@ -20,7 +20,7 @@
     width: 50px;
     height: 50px;
     background: #abc;
-    position: absolute;
+    position: absolute !important;
 }
 .region .itemnumber {
     font-weight: bold;
@@ -31,7 +31,7 @@
     width: 30px;
     height: 30px;
     background: #aff;
-    position: absolute;
+    position: absolute !important;
     text-align: center;
 }
 .staged {
@@ -47,7 +47,7 @@
     background: #a55;
 }
 .sheet {
-    position: absolute;
+    position: absolute !important;
     left: 250px;
     top: 0;
     width: 200px;
@@ -88,7 +88,7 @@
     margin: 3px;
 }
 #sheetEditorTooltip {
-    position: absolute;
+    position: absolute !important;
     min-width: 50px;
     top: -12px;
     left: 250px;
@@ -99,7 +99,7 @@
     font-size: 80%;
 }
 #sheetContainer {
-    position: absolute;
+    position: absolute !important;
     top:20px;
 }
 #generalControls .button, 
